Added documentation and updated class for proxy method

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "uberclass",
   "description": "A class framework based on JavaScriptMVC $.Class and John Resig's Simple JavaScript inheritance.",
-  "version": "1.0.0",
-  "homepage": "https://github.com/daffl/uberclass",
+  "version": "1.0.1",
+  "homepage": "http://daffl.github.com/uberclass",
   "repository": {
     "type": "git",
     "url": "git://github.com/daffl/uberclass.git"
